--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  background-color: aqua;
+  padding-left: 20%;
+  padding-right: 20%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
